[package]
name = "bondr_pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpl-core = "0.10.1"
pinocchio = "0.9.2"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.5"

[dev-dependencies]
solana-sdk = "3.0.0"
mollusk-svm = "0.6.1"
mollusk-svm-bencher = "0.6.1"

# [patch.crates-io]
# borsh = "1.5.7"
# borsh-derive = "1.5.7"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
